--- a/templates/preseed.erb
+++ b/templates/preseed.erb
@@ -2,7 +2,7 @@ d-i mirror/country string manual
 d-i mirror/http/hostname string us.archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string <%= proxy %>
-d-i partman/early_command string vgs --separator=: --noheadings | cut -f1 -d: | while read vg ; do vgchange -an $vg ; done ; pvs --separator=: --noheadings | cut -f1 -d: | while read pv ; do pvremove -ff -y $pv ; done ; for dev in /dev/sd?; do if blockdev --getsize $dev > /dev/null 2>&1 ; then debconf-set partman-auto/disk "$dev"; break; fi; done
+d-i partman/early_command string vgs --separator=: --noheadings | cut -f1 -d: | while read vg ; do vgchange -an $vg ; done ; pvs --separator=: --noheadings | cut -f1 -d: | while read pv ; do pvremove -ff -y $pv ; done ; for dev in /dev/sd?; do if blockdev --getsize $dev > /dev/null 2>&1 ; then usable_disk=$dev; break; fi; done ; <% if expert_disk %>debconf-set partman-auto/expert_recipe "$(debconf-get partman-auto/expert_recipe | sed -e "s/BOOTDISK/$usable_disk/g")" <% else %> debconf-set debconf-set partman-auto/disk "$usable_disk"<% end %>
 <% if diskpart.length > 0 %>d-i partman-auto/disk string <% diskpart.each do |element| -%><%= element %> <% end %><% end %>
 d-i partman/alignment string cylinder
 d-i partman-md/device_remove_md boolean true
@@ -31,7 +31,7 @@ openstack ::                                    \
 200 200 200 ext3                                \
         $gptonly{ }                             \
         $primary{ }                             \
-        device{ <%= boot_disk %> }              \
+        device{ BOOTDISK }              \
         method{ format } format{ }              \
         use_filesystem{ } filesystem{ ext3 }    \
         mountpoint{ /boot }                     \
