--- a/templates/preseed.erb
+++ b/templates/preseed.erb
@@ -4,7 +4,7 @@ d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string <%= proxy %>
 d-i partman/early_command string vgs --separator=: --noheadings | cut -f1 -d: | while read vg ; do vgchange -an $vg ; done ; \
                                  pvs --separator=: --noheadings | cut -f1 -d: | while read pv ; do pvremove -ff -y $pv ; done ; \
-                                 for dev in /dev/sd?; \
+                                 for dev in /dev/vd? /dev/sd?; \
                                  do \
                                      if blockdev --getsize $dev > /dev/null 2>&1 ; \
                                      then \
